Add Sample subsection

--- a/proj/1_math.tex
+++ b/proj/1_math.tex
@@ -11,7 +11,7 @@ $$
 X: \Omega\rightarrow\mathbb{R}.
 $$
 
-С прикладной точки зрения на RV обычно смотрят как на генераторы случайных чисел с заданным распределением.
+С прикладной точки зрения на RV часто смотрят как на генераторы случайных чисел с заданным распределением.
 
 \textbf{Примеры:}
 \begin{itemize}
@@ -23,15 +23,21 @@ $$
 
 \section{Распределение случайной величины}
 
-Если RV принимает дискретное множество значений $x_1,x_2,...$, то она полностью определяется значениями вероятностей: $p_k=\mathbb{P}(X=x_k)$.
+Если RV принимает дискретное множество значений $x_1,x_2,...$, то она полностью определяется значениями их вероятностей: $p_k=\mathbb{P}(X=x_k)$.
 
-Если множество значений RV не дискретно, то RV может быть описана своей функцией распределения (CDF, Cumulative Distribution Function): $F(x)=\mathbb{P}(X<x)$
+Если множество значений RV не дискретно, то RV может быть описана своей функцией распределения (CDF, Cumulative Distribution Function): $F(x)=\mathbb{P}(X<x)$.
 
-В DS в большинстве случаев CDF дифференцируемо. Производная от CDF называется плотностью распределения случайной величины: $f(x)=F'(x)$. Таким образом, по определению 
+В большинстве прикладных случаев CDF оказывается дифференцируемой функцией. Производная от CDF называется плотностью распределения случайной величины: $f(x)=F'(x)$. Таким образом, по определению 
 
-$\mathbb{P}(a<X<b)=\int_{a}^{b}f(x)dx$
+$$
+\mathbb{P}(a<X<b)=\int_{a}^{b}f(x)dx.
+$$
 
 \section{Выборка}
+
+Выборкой называется последовательность RV: $X_1, X_2, ..., X_n$. Считается, что все $X_k$ попарно независимы и имеют одно и то же распределение: $X_k \sim X$. В это случае говорят о выборке из генеральной совокупности $X$. 
+
+На практике выборкой являются конкретные реализации величин $X_k$, то есть последовательность чисел $x_1, x_2, ..., x_n$.
 
 \section{Закон больших чисел}
 
