--- a/proj/definitions.tex
+++ b/proj/definitions.tex
@@ -3,5 +3,6 @@
 \begin{tabular}{ l l }
  DS & - дата саенс \\ 
  ML & - машинное обучение \\ 
- RV & - случайная величина
+ RV & - случайная величина \\
+ CDF & - функция распределения случайной величины 
 \end{tabular}
