--- a/proj/1_math.tex
+++ b/proj/1_math.tex
@@ -1,6 +1,6 @@
 \chapter{Математика}
 
-В этой главе описаны основные математические понятия, необходимые для правильного понимания как основных, так и продвинутых методов ML. Охвачены: теория вероятностей, классическая и байесовская статистика, некоторые вопросы мат. анализа. Освещение вопросов ни в коем случае не претендует на полноту. Основная цель - составить расширенный глоссарий основных понятий и подходов, встретившихся автору в процессе работы в области ML.
+В этой главе описаны основные математические понятия, необходимые для правильного понимания как основных, так и продвинутых методов ML. Охвачены: теория вероятностей, классическая и байесовская статистика, некоторые вопросы мат. анализа. Освещение вопросов ни в коем случае не претендует на полноту и в некоторых случаях на строгость. Основная цель - составить расширенный глоссарий основных понятий и подходов, встретившихся автору в процессе работы в области ML.
 
 
 \section{Случайная величина}
@@ -25,20 +25,25 @@ $$
 
 Если RV принимает дискретное множество значений $x_1,x_2,...$, то она полностью определяется значениями их вероятностей: $p_k=\mathbb{P}(X=x_k)$.
 
-Если множество значений RV не дискретно, то RV может быть описана своей функцией распределения (CDF, Cumulative Distribution Function): $F(x)=\mathbb{P}(X<x)$.
+Если множество значений RV не дискретно, то RV может быть описана своей функцией распределения (CDF, Cumulative distribution function): $F(x)=\mathbb{P}(X<x)$.
 
-В большинстве прикладных случаев CDF оказывается дифференцируемой функцией. Производная от CDF называется плотностью распределения случайной величины: $f(x)=F'(x)$. Таким образом, по определению 
+В большинстве прикладных случаев CDF оказывается дифференцируемой функцией. Производная от CDF называется плотностью распределения случайной величины (PDF, Probability density function): $f(x)=F'(x)$. Таким образом, по определению 
 
 $$
 \mathbb{P}(a<X<b)=\int_{a}^{b}f(x)dx.
 $$
 
+
 \section{Выборка}
 
-Выборкой называется последовательность RV: $X_1, X_2, ..., X_n$. Считается, что все $X_k$ попарно независимы и имеют одно и то же распределение: $X_k \sim X$. В это случае говорят о выборке из генеральной совокупности $X$. 
+Выборкой называется последовательность RV: $X_1, X_2, ..., X_n$. Предполагается, что все $X_k$ попарно независимы и имеют одно и то же распределение: $X_k \sim X$. В этом случае говорят о выборке из генеральной совокупности $X$. 
 
 На практике выборкой являются конкретные реализации величин $X_k$, то есть последовательность чисел $x_1, x_2, ..., x_n$.
 
 \section{Закон больших чисел}
+
+\section{Статистики}
+
+\section{Bootstrap}
 
 \section{Классический и байесовский подход}
