--- a/proj/1_math.tex
+++ b/proj/1_math.tex
@@ -1,6 +1,6 @@
 \chapter{Математика}
 
-В этой главе описаны основные математические понятия, необходимые для правильного понимания как основных, так и продвинутых методов ML. Охвачены: теория вероятностей, классическая и байесовская статистика, некоторые вопросы мат. анализа. Освещение вопросов ни в коем случае не претендует на полноту и в некоторых случаях на строгость. Основная цель - составить расширенный глоссарий основных понятий и подходов, встретившихся автору в процессе работы в области ML.
+В этой главе описаны основные математические понятия, необходимые для правильного понимания как основных, так и продвинутых методов ML. Охвачены: теория вероятностей, классическая и байесовская статистика, некоторые вопросы мат. анализа.
 
 
 \section{Случайная величина}
