Add CLT section

--- a/proj/definitions.tex
+++ b/proj/definitions.tex
@@ -4,5 +4,6 @@
  DS & - дата саенс \\ 
  ML & - машинное обучение \\ 
  RV & - случайная величина \\
- CDF & - функция распределения случайной величины 
+ CDF & - функция распределения случайной величины \\
+ CLT & - центральная предельная теорема
 \end{tabular}
