Add general project structure

--- a/proj/definitions.tex
+++ b/proj/definitions.tex
@@ -1,9 +1,13 @@
 \chapter*{Обозначения}
 
 \begin{tabular}{ l l }
- DS & - дата саенс \\ 
+ DS & - наука о данных \\ 
  ML & - машинное обучение \\ 
  RV & - случайная величина \\
  CDF & - функция распределения случайной величины \\
- CLT & - центральная предельная теорема
+ PDF & - плотность распределения случайной величины \\
+ CLT & - центральная предельная теорема \\
+ $EX$ & - среднее случайной величины $X$ \\
+ $DX$ & - дисперсия случайной величины $X$ \\
+ $X \sim Y$ & - случайные величины $X$ и $Y$ одинаково распределены
 \end{tabular}
