--- a/proj/main.tex
+++ b/proj/main.tex
@@ -18,5 +18,8 @@
 \input{definitions}
 
 \input{chapters/1_math}
+\input{chapters/2_data}
+\input{chapters/3_general}
+\input{chapters/4_neural}
 
 \end{document}
