--- a/proj/main.tex
+++ b/proj/main.tex
@@ -3,7 +3,8 @@
 \usepackage[utf8]{inputenc}
 \usepackage[russian]{babel}
 \usepackage{amsfonts}
-
+\usepackage{graphicx}
+\usepackage[outdir=../out/pdf-images/]{epstopdf}
 
 \title{ML Handbook}
 \author{s.pol}
