Add links; do minor remarks

--- a/proj/main.tex
+++ b/proj/main.tex
@@ -5,6 +5,8 @@
 \usepackage{amsfonts}
 \usepackage{graphicx}
 \usepackage[outdir=../out/pdf-images/]{epstopdf}
+\usepackage{url}
+
 
 \title{ML Handbook}
 \author{s.pol}
@@ -23,5 +25,7 @@
 \input{chapters/2_data}
 \input{chapters/3_general}
 \input{chapters/4_neural}
+
+%\input{links}
 
 \end{document}
