Refactor PR-AUC section

--- a/proj/links.tex
+++ b/proj/links.tex
@@ -9,5 +9,7 @@ $https://habr.com/ru/company/ods/blog/328372/$
 дисбаланс классов
 http://www.machinelearning.ru/wiki/images/1/1c/Sem06_metrics.pdf
 
+метрика PR-AUC, дробно-линейная интерполяци и другие детали
+\url{https://classeval.wordpress.com/introduction/introduction-to-the-precision-recall-plot/}
 
 \end{thebibliography}
