--- a/proj/main.tex
+++ b/proj/main.tex
@@ -1,7 +1,8 @@
-\documentclass{report}
+\documentclass[12pt,oneside]{book}
 
 \usepackage[utf8]{inputenc}
 \usepackage[russian]{babel}
+\usepackage[top = 3cm, bottom = 3cm, left = 3cm, right = 3cm]{geometry}
 \usepackage{amsfonts}
 \usepackage{graphicx}
 \usepackage[outdir=../out/pdf-images/]{epstopdf}
