--- a/proj/main.tex
+++ b/proj/main.tex
@@ -7,6 +7,7 @@
 \usepackage{graphicx}
 \usepackage[outdir=../out/pdf-images/]{epstopdf}
 \usepackage{url}
+\usepackage{amssymb}
 
 
 \title{ML Handbook}
