Add bayesian inference section

--- a/proj/main.tex
+++ b/proj/main.tex
@@ -8,7 +8,9 @@
 \usepackage[outdir=../out/pdf-images/]{epstopdf}
 \usepackage{url}
 \usepackage{amssymb}
+\usepackage{amsmath}
 
+\DeclareMathOperator*{\argmax}{argmax}
 
 \title{ML Handbook}
 \author{s.pol}
