--- a/proj/preface.tex
+++ b/proj/preface.tex
@@ -1,8 +1,8 @@
 \chapter*{Предисловие}
 
-В данной книге описаны основные понятия, методы и подходы, широко используемые в современном DS и ML. Обычно, свободное владение этими понятиями необходимо для правильного понимания как основных, так и продвинутых методов ML и по умолчанию предполагается от DS специалиста.
+В данной книге описаны основные понятия, методы и подходы, широко используемые в современном DS и ML, встречавшиеся автору на собеседованиях и в ежедневной работе. Обычно, свободное владение этими понятиями необходимо для правильного понимания как основных, так и продвинутых методов ML и по умолчанию предполагается от специалиста в области DS.
 
-Здесь собраны разные определения, встречавшиеся автору в научных статьях по ML и на собеседованиях. Охвачены: теория вероятностей, классическая и байесовская статистика, некоторые вопросы мат. анализа.
+Охвачены такие разделы, как теория вероятностей, классическая и байесовская статистика, некоторые вопросы мат. анализа, общие понятия DS и ML.
 
-Освещение вопросов ни в коем случае не претендует на полноту и в некоторых случаях на строгость. Основная цель книги - составить расширенный глоссарий основных понятий и подходов, встретившихся автору в процессе работы в области ML.
+Книга представляет собой скорее глоссарий по основным понятиям ML, чем систематическим изложением какой-либо области. Освещение вопросов ни в коем случае не претендует на полноту и в некоторых случаях на математическую строгость.
 
