Add Bootstrap sectio

--- a/proj/main.tex
+++ b/proj/main.tex
@@ -11,6 +11,7 @@
 \usepackage{amsmath}
 
 \DeclareMathOperator*{\argmax}{argmax}
+\DeclareMathOperator*{\const}{const}
 
 \title{ML Handbook}
 \author{s.pol}
