--- a/proj/main.tex
+++ b/proj/main.tex
@@ -14,7 +14,7 @@
 \DeclareMathOperator*{\argmax}{argmin}
 \DeclareMathOperator*{\const}{const}
 
-\title{ML Handbook}
+\title{ML Snippets}
 \author{s.pol}
 \date{}
 
