Fix argmin definition

--- a/proj/main.tex
+++ b/proj/main.tex
@@ -11,7 +11,7 @@
 \usepackage{amsmath}
 
 \DeclareMathOperator*{\argmax}{argmax}
-\DeclareMathOperator*{\argmax}{argmin}
+\DeclareMathOperator*{\argmin}{argmin}
 \DeclareMathOperator*{\const}{const}
 
 \title{ML Snippets}
