Add Random forests section

--- a/proj/main.tex
+++ b/proj/main.tex
@@ -13,6 +13,7 @@
 \DeclareMathOperator*{\argmax}{argmax}
 \DeclareMathOperator*{\argmin}{argmin}
 \DeclareMathOperator*{\const}{const}
+\DeclareMathOperator*{\mode}{mode}
 
 \title{ML Snippets}
 \author{s.pol}
